--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;700&display=swap" rel="stylesheet"> 
-    <link rel="icon" href="/img/Logo - Copy.ico">
+    <link rel="icon" href="Logo - Copy.ico">
     <title>Fresh Food</title>
 </head>
 <body>
     <div class="hero">
         <nav class="navigation">
-            <img src="/img/Logo.png" class="logo">
+            <img src="Logo.png" class="logo">
             <ul>
                 <a href="/index.html"><li>Menu</li></a>
                 <a href="#Store"><li>Store</li></a>
@@ -49,27 +49,27 @@
     <h1 class="offer">Offers</h1>
     <section class="contanier" id="Store">
         <div class="cart">
-            <img src="/img/1.jpg" class="figer4">
+            <img src="1.jpg" class="figer4">
             <h3>chicken with syrup  </h3>
             <button type="button" class="o-btn">Get 50$</button>
         </div>
         <div class="cart">
-            <img src="/img/2.jpeg" class="figer4">
+            <img src="2.jpeg" class="figer4">
             <h3>Beef Burger</h3>
             <button type="button" class="o-btn">Get 50$</button>
         </div>
         <div class="cart">
-            <img src="/img/3.jpg" class="figer4">
+            <img src="3.jpg" class="figer4">
             <h3>Syrian drag</h3>
             <button type="button" class="o-btn">Get 50$</button>
         </div>
         <div class="cart">
-            <img src="/img/4.jpg" class="figer4">
+            <img src="4.jpg" class="figer4">
             <h3>8 chicken burgers</h3>
             <button type="button" class="o-btn">Get 50$</button>
         </div>
         <div class="cart">
-            <img src="/img/5.jpg" class="figer4">
+            <img src="5.jpg" class="figer4">
             <h3>delicious bomb</h3>
             <button type="button" class="o-btn">Get 50$</button>
         </div>
